cookie session example

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <form method="POST" action="/login">
+      <p>
+        Please use login hardcoded@email.com and password 123 to login as a test
+        user
+      </p>
       <div>
         <label>Email</label>
         <input name="email" />
