--- a/emails/templates/welcome/content.html
+++ b/emails/templates/welcome/content.html
@@ -441,12 +441,30 @@
     </style>
   </head>
   <body
-    style='width: 100% !important; height: 100%; -webkit-text-size-adjust: none; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; background-color: #F2F4F6; color: #51545E; margin: 0;'
+    style="
+      width: 100% !important;
+      height: 100%;
+      -webkit-text-size-adjust: none;
+      font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+      background-color: #f2f4f6;
+      color: #51545e;
+      margin: 0;
+    "
     bgcolor="#F2F4F6"
   >
     <span
       class="preheader"
-      style="display: none !important; visibility: hidden; mso-hide: all; font-size: 1px; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden;"
+      style="
+        display: none !important;
+        visibility: hidden;
+        mso-hide: all;
+        font-size: 1px;
+        line-height: 1px;
+        max-height: 0;
+        max-width: 0;
+        opacity: 0;
+        overflow: hidden;
+      "
       >{{newAccountEmailFirstParagraph}}</span
     >
     <table
@@ -455,13 +473,25 @@
       cellpadding="0"
       cellspacing="0"
       role="presentation"
-      style="width: 100%; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #F2F4F6; margin: 0; padding: 0;"
+      style="
+        width: 100%;
+        -premailer-width: 100%;
+        -premailer-cellpadding: 0;
+        -premailer-cellspacing: 0;
+        background-color: #f2f4f6;
+        margin: 0;
+        padding: 0;
+      "
       bgcolor="#F2F4F6"
     >
       <tr>
         <td
           align="center"
-          style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px;'
+          style="
+            word-break: break-word;
+            font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+            font-size: 16px;
+          "
         >
           <table
             class="email-content"
@@ -469,18 +499,37 @@
             cellpadding="0"
             cellspacing="0"
             role="presentation"
-            style="width: 100%; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; margin: 0; padding: 0;"
+            style="
+              width: 100%;
+              -premailer-width: 100%;
+              -premailer-cellpadding: 0;
+              -premailer-cellspacing: 0;
+              margin: 0;
+              padding: 0;
+            "
           >
             <tr>
               <td
                 class="email-masthead"
-                style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; text-align: center; padding: 25px 0;'
+                style="
+                  word-break: break-word;
+                  font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+                  font-size: 16px;
+                  text-align: center;
+                  padding: 25px 0;
+                "
                 align="center"
               >
                 <a
                   href="https://example.com"
                   class="f-fallback email-masthead_name"
-                  style="color: #A8AAAF; font-size: 16px; font-weight: bold; text-decoration: none; text-shadow: 0 1px 0 white;"
+                  style="
+                    color: #a8aaaf;
+                    font-size: 16px;
+                    font-weight: bold;
+                    text-decoration: none;
+                    text-shadow: 0 1px 0 white;
+                  "
                 >
                   [Product Name]
                 </a>
@@ -493,7 +542,17 @@
                 width="570"
                 cellpadding="0"
                 cellspacing="0"
-                style='word-break: break-word; margin: 0; padding: 0; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; width: 100%; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0;'
+                style="
+                  word-break: break-word;
+                  margin: 0;
+                  padding: 0;
+                  font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+                  font-size: 16px;
+                  width: 100%;
+                  -premailer-width: 100%;
+                  -premailer-cellpadding: 0;
+                  -premailer-cellspacing: 0;
+                "
               >
                 <table
                   class="email-body_inner"
@@ -502,24 +561,48 @@
                   cellpadding="0"
                   cellspacing="0"
                   role="presentation"
-                  style="width: 570px; -premailer-width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #FFFFFF; margin: 0 auto; padding: 0;"
+                  style="
+                    width: 570px;
+                    -premailer-width: 570px;
+                    -premailer-cellpadding: 0;
+                    -premailer-cellspacing: 0;
+                    background-color: #ffffff;
+                    margin: 0 auto;
+                    padding: 0;
+                  "
                   bgcolor="#FFFFFF"
                 >
                   <!-- Body content -->
                   <tr>
                     <td
                       class="content-cell"
-                      style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; padding: 45px;'
+                      style="
+                        word-break: break-word;
+                        font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+                        font-size: 16px;
+                        padding: 45px;
+                      "
                     >
                       <div class="f-fallback">
                         <h1
-                          style="margin-top: 0; color: #333333; font-size: 22px; font-weight: bold; text-align: left;"
+                          style="
+                            margin-top: 0;
+                            color: #333333;
+                            font-size: 22px;
+                            font-weight: bold;
+                            text-align: left;
+                          "
                           align="left"
                         >
                           {{newAccountEmailTitle}}
                         </h1>
                         <p
-                          style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;"
+                          style="
+                            font-size: 16px;
+                            line-height: 1.625;
+                            color: #51545e;
+                            margin: 0.4em 0 1.1875em;
+                          "
                         >
                           {{newAccountEmailFirstParagraph}}
                         </p>
@@ -539,7 +622,12 @@
                           </tr>
                         </table> -->
                         <p
-                          style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;"
+                          style="
+                            font-size: 16px;
+                            line-height: 1.625;
+                            color: #51545e;
+                            margin: 0.4em 0 1.1875em;
+                          "
                         >
                           {{newAccountEmailForReference}}
                         </p>
@@ -549,12 +637,19 @@
                           cellpadding="0"
                           cellspacing="0"
                           role="presentation"
-                          style="margin: 0 0 21px;"
+                          style="margin: 0 0 21px"
                         >
                           <tr>
                             <td
                               class="attributes_content"
-                              style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; background-color: #F4F4F7; padding: 16px;'
+                              style="
+                                word-break: break-word;
+                                font-family: 'Nunito Sans', Helvetica, Arial,
+                                  sans-serif;
+                                font-size: 16px;
+                                background-color: #f4f4f7;
+                                padding: 16px;
+                              "
                               bgcolor="#F4F4F7"
                             >
                               <table
@@ -566,7 +661,13 @@
                                 <tr>
                                   <td
                                     class="attributes_item"
-                                    style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; padding: 0;'
+                                    style="
+                                      word-break: break-word;
+                                      font-family: 'Nunito Sans', Helvetica,
+                                        Arial, sans-serif;
+                                      font-size: 16px;
+                                      padding: 0;
+                                    "
                                   >
                                     <span class="f-fallback">
                                       <strong>Login: </strong> {{userEmail}}
@@ -579,15 +680,14 @@
                         </table>
 
                         <p
-                          style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;"
+                          style="
+                            font-size: 16px;
+                            line-height: 1.625;
+                            color: #51545e;
+                            margin: 0.4em 0 1.1875em;
+                          "
                         >
-                          {{newAccountWhatsAppGroup}}
-                        </p>
-
-                        <p
-                          style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;"
-                        >
-                          {{newAccountEmailBottom}} [Unsubscribe Link]
+                          [Unsubscribe Link]
                         </p>
                         <!-- <table
                           class="attributes"
@@ -701,7 +801,11 @@
             </tr>
             <tr>
               <td
-                style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px;'
+                style="
+                  word-break: break-word;
+                  font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+                  font-size: 16px;
+                "
               >
                 <table
                   class="email-footer"
@@ -710,24 +814,49 @@
                   cellpadding="0"
                   cellspacing="0"
                   role="presentation"
-                  style="width: 570px; -premailer-width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center; margin: 0 auto; padding: 0;"
+                  style="
+                    width: 570px;
+                    -premailer-width: 570px;
+                    -premailer-cellpadding: 0;
+                    -premailer-cellspacing: 0;
+                    text-align: center;
+                    margin: 0 auto;
+                    padding: 0;
+                  "
                 >
                   <tr>
                     <td
                       class="content-cell"
                       align="center"
-                      style='word-break: break-word; font-family: "Nunito Sans", Helvetica, Arial, sans-serif; font-size: 16px; padding: 45px;'
+                      style="
+                        word-break: break-word;
+                        font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+                        font-size: 16px;
+                        padding: 45px;
+                      "
                     >
                       <p
                         class="f-fallback sub align-center"
-                        style="font-size: 13px; line-height: 1.625; text-align: center; color: #A8AAAF; margin: .4em 0 1.1875em;"
+                        style="
+                          font-size: 13px;
+                          line-height: 1.625;
+                          text-align: center;
+                          color: #a8aaaf;
+                          margin: 0.4em 0 1.1875em;
+                        "
                         align="center"
                       >
                         © [Product Name]. All rights reserved.
                       </p>
                       <p
                         class="f-fallback sub align-center"
-                        style="font-size: 13px; line-height: 1.625; text-align: center; color: #A8AAAF; margin: .4em 0 1.1875em;"
+                        style="
+                          font-size: 13px;
+                          line-height: 1.625;
+                          text-align: center;
+                          color: #a8aaaf;
+                          margin: 0.4em 0 1.1875em;
+                        "
                         align="center"
                       >
                         [Company Name, LLC]
